--- a/src/sass/pages/_view.scss
+++ b/src/sass/pages/_view.scss
@@ -16,7 +16,7 @@
   border-width: 1px;
   border-radius: 3px;
   padding: 1px 0.5rem;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 400;
 }
 
@@ -66,7 +66,7 @@
   }
   @include a.respond(ipadpro) {
     transform: scale(1);
-    top: 20px;
+    top: 40px;
     left: 0px;
   }
   @include a.respond(desktop) {
